# SimpleSTT

./: .gitignore  AGENT.md  README.md
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: api.py
backend/app/routers/: __init__.py  auth.py  files.py  keys.py  options.py  transcriptions.py
backend/app/services/: audio.py  cost.py  openai_client.py  storage.py  transcription.py
backend/tests/: conftest.py  test_analyze.py  test_auth.py  test_options.py  test_transcriptions.py
frontend/: env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.vue  i18n.ts  main.ts  router.ts
frontend/src/api/: client.ts  endpoints.ts
frontend/src/composables/: useAppMode.ts  useAuth.ts  useTheme.ts
frontend/src/types/: api.ts
frontend/src/views/: LoginView.vue  TranscriptionView.vue
frontend/tests/unit/: stream.spec.ts  useAuth.spec.ts
