[project]
name = "audio-transcription-api"
version = "0.1.0"
description = "Web backend for audio transcription tool"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "mutagen>=1.47.0",
  "openai>=1.51.0",
  "azure-ai-ml>=1.18.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
pythonpath = ["app"]
